testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment26.errors.txt
bug24730.js(1,5): error TS7022: 'UI' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
bug24730.js(7,1): error TS7022: 'context' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== bug24730.js (2 errors) ====
    var UI = {}
        ~~
!!! error TS7022: 'UI' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    UI.TreeElement = class {
        constructor() {
            this.treeOutline = 12
        }
    };
    UI.context = new UI.TreeElement()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'context' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    class C extends UI.TreeElement {
        onpopulate() {
            this.doesNotExist
            this.treeOutline.doesntExistEither()
        }
    };
    